Correction carte activité version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -821,6 +821,7 @@ a:hover {
     .activités-title {
         width: 100%;
         margin-bottom: 20px;
+        
     }
     .activités-card {
         display: flex;
@@ -831,7 +832,7 @@ a:hover {
     }
 
     .activités-card .card {
-        width: 315px;
+        min-width: 315px;
         height: 200px;
         margin: 0px;
     }
